noinst_LIBRARIES	= libnet.a
libnet_a_SOURCES	= libnet_asn1.c libnet_build_arp.c libnet_build_dns.c libnet_build_ethernet.c libnet_build_icmp.c libnet_build_igmp.c libnet_build_ip.c libnet_build_ospf.c libnet_build_rip.c libnet_build_snmp.c libnet_build_tcp.c libnet_build_udp.c libnet_build_vrrp.c libnet_checksum.c libnet_error.c libnet_hex_dump.c libnet_if_addr.c libnet_insert_ipo.c libnet_insert_tcpo.c libnet_link_@LL_INT_TYPE@.c libnet_packet_mem.c libnet_port_list.c libnet_prand.c libnet_resolve.c libnet_socket.c libnet_version.c libnet_write_ip.c
EXTRA_DIST		= libnet_link_bpf.c libnet_link_dlpi.c libnet_link_nit.c libnet_link_pf.c libnet_link_snit.c libnet_link_snoop.c libnet_link_sockpacket.c

